--- a/less/paperhive/utils.less
+++ b/less/paperhive/utils.less
@@ -163,3 +163,17 @@ ul.ph-ul-md-spacing {
     background-color: #eee;
   }
 }
+
+.ph-grow-container {
+  display: flex;
+}
+
+.ph-grow-item {
+  flex-grow: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.ph-text-overflow {
+  .text-overflow();
+}
